--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -3,7 +3,7 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ecaceres <marvin@42.fr>                    +#+  +:+       +#+         #
+#    By: ppetchda <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/08/12 12:36:23 by ecaceres          #+#    #+#              #
 #    Updated: 2019/08/12 12:36:25 by ecaceres         ###   ########.fr        #
@@ -14,18 +14,16 @@ SRCS	= srcs/ft_putchar.c srcs/ft_putstr.c srcs/ft_strlen.c srcs/ft_strcmp.c srcs
 OBJS	= ${SRCS:.c=.o}
 INCS	= includes
 NAME	= libft.a
-LIBC	= ar rc
-LIBR	= ranlib
+LIBC	= ar -rcs
 CC		= gcc
 RM		= rm -f
 CFLAGS	= -Wall -Wextra -Werror
 
-.c.o:
-	${CC} ${CFLAGS} -c $< -o ${<:.c=.o} -I${INCS}
+%.o: %.c
+	${CC} ${CFLAGS} -c $< -o $@ -I${INCS}
 
 ${NAME}: ${OBJS}
 	${LIBC} ${NAME} ${OBJS}
-	${LIBR} ${NAME}
 
 all: ${NAME}
 
